Fix history font on IE.

--- a/web/pgadmin/static/scss/_typography.scss
+++ b/web/pgadmin/static/scss/_typography.scss
@@ -48,21 +48,21 @@ Font Typography
 }
 
 .text-14 {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
 
 .text-13 {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
 }
 
 .text-12 {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12px;
 }
 
 .text-11 {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 11px;
 }
